--- a/dashlane.nuspec.tmpl
+++ b/dashlane.nuspec.tmpl
@@ -21,6 +21,7 @@ Never misplaced. Never forgotten. Dashlane securely remembers all of your passwo
     <copyright>© Dashlane, Inc</copyright>
   </metadata>
   <files>
-    <file src="tools\**" target="tools" />
+    <file src="tools\chocolateyinstall.ps1" target="tools" />
+    <file src="tools\chocolateyuninstall.ps1" target="tools" />
   </files>
 </package>
