updated build script
added more replacements

--- a/src/dashlane.nuspec.tmpl
+++ b/src/dashlane.nuspec.tmpl
@@ -1,10 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2015/06/nuspec.xsd">
   <metadata>
-    <id>dashlane</id>
-    <title>dashlane</title>
+    <id>$id$</id>
     <version>$version$</version>
-    <authors>dashlane</authors>
+    <authors>$author$</authors>
     <owners>dittodhole</owners>
     <description>Never forget another password
 Never misplaced. Never forgotten. Dashlane securely remembers all of your passwords.</description>
@@ -18,7 +17,7 @@ Never misplaced. Never forgotten. Dashlane securely remembers all of your passwo
     <docsUrl>https://www.dashlane.com/features/password-manager</docsUrl>
     <mailingListUrl>https://support.dashlane.com</mailingListUrl>
     <tags>dashlane admin</tags>
-    <copyright>© Dashlane, Inc</copyright>
+    <copyright>$copyright$</copyright>
   </metadata>
   <files>
     <file src="tools\chocolateyinstall.ps1" target="tools" />
