added title for package

--- a/src/dashlane.nuspec.tmpl
+++ b/src/dashlane.nuspec.tmpl
@@ -2,6 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2015/06/nuspec.xsd">
   <metadata>
     <id>$id$</id>
+    <title>$title$</title>
     <version>$version$</version>
     <authors>$author$</authors>
     <owners>dittodhole</owners>
