added branch to replacements

--- a/src/dashlane.nuspec.tmpl
+++ b/src/dashlane.nuspec.tmpl
@@ -9,7 +9,7 @@
     <description>Never forget another password
 Never misplaced. Never forgotten. Dashlane securely remembers all of your passwords.</description>
     <summary>Dashlane is a password manager app and secure digital wallet.</summary>
-    <iconUrl>https://cdn.rawgit.com/dittodhole/chocolatey-dashlane/master/assets/icon256.png</iconUrl>
+    <iconUrl>https://cdn.rawgit.com/dittodhole/chocolatey-dashlane/$branch$/assets/icon256.png</iconUrl>
     <packageSourceUrl>https://github.com/dittodhole/chocolatey-dashlane</packageSourceUrl>
     <bugTrackerUrl>https://github.com/dittodhole/chocolatey-dashlane/issues</bugTrackerUrl>
     <projectUrl>https://www.dashlane.com/</projectUrl>
