--- a/src/dashlane.nuspec.tmpl
+++ b/src/dashlane.nuspec.tmpl
@@ -6,19 +6,21 @@
     <version>$version$</version>
     <authors>$author$</authors>
     <owners>dittodhole</owners>
+    <summary>Dashlane is a password manager app and secure digital wallet.</summary>
     <description>Never forget another password
 Never misplaced. Never forgotten. Dashlane securely remembers all of your passwords.</description>
-    <summary>Dashlane is a password manager app and secure digital wallet.</summary>
     <iconUrl>https://cdn.rawgit.com/dittodhole/chocolatey-dashlane/$branch$/assets/icon256.png</iconUrl>
     <packageSourceUrl>https://github.com/dittodhole/chocolatey-dashlane</packageSourceUrl>
     <bugTrackerUrl>https://github.com/dittodhole/chocolatey-dashlane/issues</bugTrackerUrl>
     <projectUrl>https://www.dashlane.com/</projectUrl>
-    <projectSourceUrl>https://www.dashlane.com</projectSourceUrl>
     <licenseUrl>https://www.dashlane.com/terms</licenseUrl>
     <docsUrl>https://www.dashlane.com/features/password-manager</docsUrl>
     <mailingListUrl>https://support.dashlane.com</mailingListUrl>
     <tags>dashlane admin</tags>
     <copyright>$copyright$</copyright>
+    <dependencies>
+      <dependency id="chocolatey-core.extension" version="1.1.0" />
+    </dependencies>
   </metadata>
   <files>
     <file src="tools\chocolateyinstall.ps1" target="tools" />
